[package]
name = "marketplace"
version = "0.1.0"
authors = ["deusz <lovaszoltanr@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = {git = "https://github.com/casper-network/casper-node", branch = "dev"}
casper-types = {git = "https://github.com/casper-network/casper-node", branch = "dev"}

[[bin]]
name = "marketplace"
path = "src/main.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "send_tokens"
path = "src/send_tokens.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
